--- a/GroundControl_V0.3
+++ b/GroundControl_V0.3
@@ -1,5 +1,5 @@
 //===============================================================
-// @file:     GroundControl_V0.1
+// @file:     GroundControl_V0.3
 // @brief:    Communication CubeSat - Ground Control
 //
 // @authors:  Adrian Setka, Immanuel Weule
@@ -7,8 +7,9 @@
 // @hardware: ESP32-DevKitC V4 (ESP32-WROOM-32U)
 // @comments: Can only connect to 2,4 GHz, not to 5 GHz
 //
-// @date:     2021-05-29
+// @date:     2021-07-03
 //===============================================================
+
 
 
 //===============================================================
@@ -22,27 +23,27 @@
 #include <SPIFFS.h>
 
 #include <ESPAsyncWebServer.h>
-#include <ESPmDNS.h>  //for URL/name instead of IP address
+#include <ESPmDNS.h>  // for URL/name instead of IP address
 #include <analogWrite.h>
 
-#include "index.h"  //Web page header file
+#include "index.h"  // web page header file
 
-int counter=0;  //counter for checking connection status in loop
+int counter = 0; // counter for checking connection status in loop
 
-AsyncWebServer server(80);  //Setup a HTTP server
+AsyncWebServer server(80);  // setup a HTTP server
 
 //Set WiFi SSID and password
-const char* ssid = "Apartment 322"; //WiFi SSID
-const char* password = "06456469822825645048"; //WiFi password
+const char* ssid = "Kewwin_02"; // WiFi SSID
+const char* password = "2214934027604276"; // WiFi password
 
-const char* PARAM_COMMAND = "inputCommand"; // Variable for commandline
-const char* PARAM_INIT = "inputInit"; // Variable for initilization
-const char* PARAM_FLOAT = "inputFloat"; //useless
+const char* PARAM_COMMAND = "inCommand"; // variable for commandline
+const char* PARAM_INIT = "inInit"; // variable for initilization
 
-const int Analog_Pin = 34;  //Analog Channel Pin for Website send test
-const int LED_Pin = 27; // Test LED Pin for Website Receiver test
+const int Analog_Pin = 34;  // analog Channel Pin for Website send test
+const int LED_Pin = 27; // test LED Pin for Website Receiver test
 
-
+const char* http_username = "admin";  // username for login
+const char* http_password = "admin";  // password for login
 
 //===============================================================
 // Function declarations
@@ -50,33 +51,29 @@ const int LED_Pin = 27; // Test LED Pin for Website Receiver test
 
 void ConnectToWiFi() {
   Serial.println("Connecting to ");
-  Serial.print(ssid);
+  Serial.print(ssid); // print IP adress of ESP on console
   
   WiFi.disconnect();
-  WiFi.begin(ssid, password); //For ESP as a station; for ESP as a AP use "WiFi.softAP(ssid, password)"
+  WiFi.begin(ssid, password); // for ESP as a station; for ESP as a AP use "WiFi.softAP(ssid, password)"
 
-  //Wait for WiFi to connect
+  // wait for WiFi to connect
   while(WiFi.waitForConnectResult() != WL_CONNECTED){      
       Serial.print(".");
   }
     
-  //If connection is successful show IP address in serial monitor
+  // if connection is successful show IP address in serial monitor
   Serial.println("");
   Serial.print("Connected to ");
   Serial.println(ssid);
   Serial.print("IP address: ");
-  Serial.println(WiFi.localIP()); //IP address assigned to your ESP
+  Serial.println(WiFi.localIP()); // IP address assigned to your ESP
 
   return;
 }
 
-
-
 void notFound(AsyncWebServerRequest *request) {
   request->send(404, "text/plain", "Not found");
 }
-
-
 
 String readFile(fs::FS &fs, const char * path){
   Serial.printf("Reading file: %s\r\n", path);
@@ -110,22 +107,19 @@ void writeFile(fs::FS &fs, const char * path, const char * message){
   file.close();
 }
 
-// Replaces placeholder with stored values
 String processor(const String& var){
   //Serial.println(var);
-  if(var == "inputCommand"){
-    return readFile(SPIFFS, "/inputCommand.txt");
+  if(var == "inCommand"){
+    return readFile(SPIFFS, "/inCommand.txt");
   }
-  else if(var == "inputInit"){
-    return readFile(SPIFFS, "/inputInit.txt");
+  else if(var == "inInit"){
+    return readFile(SPIFFS, "/inInit.txt");
   }
-  else if(var == "inputFloat"){
-    return readFile(SPIFFS, "/inputFloat.txt");
+  else if(var == "inTest"){
+    return readFile(SPIFFS, "/inTest.txt");
   }
   return String();
 }
-
-
 
 //===============================================================
 // Test Functions
@@ -141,54 +135,52 @@ void TestReceiver() {
   return;
 }
 
-
-
 //===============================================================
 // Setup
 //===============================================================
 
 void setup(void){
-  pinMode(LED_Pin, OUTPUT);
-  digitalWrite(LED_Pin, LOW);
   
-  Serial.begin(115200); //Open a serial connection
+  Serial.begin(115200); // open a serial connection
   Serial.println("Booting...");
 
-  // Initialize SPIFFS
+  // initialize SPIFFS
   if(!SPIFFS.begin(true)){
     Serial.println("An Error has occurred while mounting SPIFFS");
     return;
   }
 
-
-  //Initialize how ESP should act - AP or STA (comment out one initialization)
-  //WiFi.mode(WIFI_AP); //Access point mode: stations can connect to the ESP
-  WiFi.mode(WIFI_STA); //Station mode: the ESP connects to an access point
+  // initialize how ESP should act - AP or STA (comment out one initialization)
+  //WiFi.mode(WIFI_AP); // access point mode: stations can connect to the ESP
+  WiFi.mode(WIFI_STA); // station mode: the ESP connects to an access point
 
   ConnectToWiFi();
 
-  if(!MDNS.begin("cubesat")) {  //argument of MDNS.begin holds website name (".local" has to be added)
+  if(!MDNS.begin("cubesat")) {  // argument of MDNS.begin holds website name (".local" has to be added)
      Serial.println("Error starting mDNS");
      return;
   }
-  
-  // Send web page with input fields to client
+  // route for root / web page
   server.on("/", HTTP_GET, [](AsyncWebServerRequest *request){
+    if(!request->authenticate(http_username, http_password))
+      return request->requestAuthentication();
     request->send_P(200, "text/html", index_html, processor);
   });
   
-  // Send a GET request to <ESP_IP>/get?inputString=<inputMessage>
+  // send a GET request to <ESP_IP>/get?inputString=<inputMessage>
   server.on("/get", HTTP_GET, [] (AsyncWebServerRequest *request) {
+    if(!request->authenticate(http_username, http_password))
+      return request->requestAuthentication();
     String inputMessage;
     // GET inputString value on <ESP_IP>/get?inputString=<inputMessage>
     if (request->hasParam(PARAM_COMMAND)) {
       inputMessage = request->getParam(PARAM_COMMAND)->value();
-      writeFile(SPIFFS, "/inputCommand.txt", inputMessage.c_str());
+      writeFile(SPIFFS, "/inCommand.txt", inputMessage.c_str());
     }
     // GET inputInt value on <ESP_IP>/get?inputInt=<inputMessage>
     else if (request->hasParam(PARAM_INIT)) {
       inputMessage = request->getParam(PARAM_INIT)->value();
-      writeFile(SPIFFS, "/inputInit.txt", inputMessage.c_str());
+      writeFile(SPIFFS, "/inInit.txt", inputMessage.c_str());
     }
     else {
       inputMessage = "No message sent";
@@ -197,10 +189,13 @@ void setup(void){
     request->send(200, "text/text", inputMessage);
   });
 
-  //To get update of ADC Value only
+  // to get update of ADC Value only
   server.on("/readADC", [] (AsyncWebServerRequest *request) {
+     if(!request->authenticate(http_username, http_password))
+      return request->requestAuthentication();
      int a = analogRead(Analog_Pin);
      String adcValue = String(a);
+     writeFile(SPIFFS, "/inInit.txt", adcValue.c_str());
      request->send(200, "text/plane", adcValue);
   });
   
@@ -209,15 +204,14 @@ void setup(void){
 }
 
 
-
 //===============================================================
 // Loop
 //===============================================================
 
 void loop(void){
 
-  //Check if ESP is still connected to WiFi and reconnect if connection was lost
-  if(counter>6) { //Dont check connection status in every loop (for better runtime)
+  // check if ESP is still connected to WiFi and reconnect if connection was lost
+  if(counter>6) { // dont check connection status in every loop (for better runtime)
     if (WiFi.status() != WL_CONNECTED) {
       Serial.println("WiFi not connected. Try to reconnect...");
       ConnectToWiFi();
@@ -226,12 +220,13 @@ void loop(void){
   } else {
     counter++;
   }
-  // To access your stored values on inputString, inputInt, inputFloat
-  String yourInputCommand = readFile(SPIFFS, "/inputCommand.txt");
+  
+  // to access your stored values on inCommand, inInit
+  String yourInputCommand = readFile(SPIFFS, "/inCommand.txt");
   Serial.print("*** Your inputCommand: ");
   Serial.println(yourInputCommand);
   
-  String yourInputInit = readFile(SPIFFS, "/inputInit.txt");
+  String yourInputInit = readFile(SPIFFS, "/inInit.txt");
   Serial.print("*** Your inputInit: ");
   Serial.println(yourInputInit);
   
